# srk-codebase

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
FUN/: README.md
FUN/FourierVisual/: README.md  epic.py  fourier.py  pyproject.toml  sawtooth.py  sinwave.py
FUN/FourierVisual/dev/legacy/: funcFourier.py  sawtooth.py  test_sawtooth.py  test_sine.py  test_svg.py  test_svg_to_fourier.py
FUN/FourierVisual/examples/: animate_svg.py
FUN/FourierVisual/scripts/: funcFourier.py  sinwave.py  svgmodules.py  test_fourier.py  test_svg_to_fourier.py  test_svt_to_fourier.py
FUN/FourierVisual/src/fouriersartists/: __init__.py
FUN/FourierVisual/src/fouriersartists/animation/: __init__.py  epicycle_animator.py
FUN/FourierVisual/src/fouriersartists/core/: __init__.py  fourier_constants.py
FUN/FourierVisual/src/fouriersartists/io/: __init__.py  svg_parser.py
FUN/FourierVisual/src/fouriersartists/utils/: __init__.py  geometry.py
FUN/ProjectEuler/: README.md  math_utils.py  p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
ML/: README.md
ML/XGBoost_to_fortran/: README.md  parseModel.f90  parseModel.py  parse_model_mod.f90  test_parse_model.f90  treeModel.json  treeModel.pkl  treeModel.txt
ML/other_ml_models/: README.md
NUMERICAL_METHODS/: README.md
NUMERICAL_METHODS/CFD/: README.md
NUMERICAL_METHODS/FEM/: README.md
NUMERICAL_METHODS/FEM/3D_FEM/: README.md  (+1 more)
PROGRAMMING_EXERCISES/: README.md
PROGRAMMING_EXERCISES/c_cpp_exercises/: README.md
Utils/: README.md  file_io.py  plotting.py
(+169 files in other folders)
